--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "MAIN_URL": "https://twitter.com/login",
   "QUERY_URL": "http://twitter.com/search?q=",
   "HOST" : "localhost",
-  "USER_NAME" : "root",
+  "USER_NAME" : "newuser",
   "DB_NAME" : "twitter_db",
   "CONSUMER_KEY": "1HNgHTDLVvJDIY2E01qlg5YEq",
   "CONSUMER_SECRET": "Hu5vIrSjrPz33I95HgmQ6jLrXkERKC10a1xtqbstp3S9LUBTU1",
